tests/ui/resolve/resolve-conflict-import-vs-extern-crate.rs
//@ edition: 2015
use std::slice as std; //~ ERROR the name `std` is defined multiple times

fn main() {
}

// ferrocene-annotations: fls_9gprp17h6t1q
// Use Imports
